# wreckage-deprecated

./: Cargo.toml
shaders/: main.comp
src/: main.rs
src/renderer/: mod.rs  renderer.rs
src/renderer/pipelines/: mod.rs  naive.rs  primitive.rs
src/renderer/pipelines/naive/: camera.rs  constants.rs  mod.rs  primitives.rs  renderer.rs  shaders.rs
