[package]
name = "wreckage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = { version = "0.33", features = ["default", "macros"] } 
vulkano-win = "0.33.0"
winit = "0.28.3"
image = "0.24"
log = "0.4.17"
env_logger = "0.10.0"
nalgebra-glm = { version = "0.18.0", features = ["default", "convert-bytemuck", "cuda"] }
vulkano-shaders = "0.33.0"
git-version = "0.3.5"

[profile.dev]
opt-level = 1
